# pages

Proyecto_2/: pyproject.toml
Proyecto_2/pages_project/: db.sqlite3
Proyecto_2/pages_project/pages/: tests.py  urls.py
Proyecto_2/pages_project/pages/templates/: base.html
Proyecto_2/pages_project/pages_project/: settings.py  urls.py
pages/: tests.py  urls.py  views.py
pages/templates/: about.html  base.html  home.html
pages_project/: asgi.py  settings.py  urls.py  wsgi.py
